--- a/lib/l10n/app_zh_CN.arb
+++ b/lib/l10n/app_zh_CN.arb
@@ -61,7 +61,7 @@
   "supportLabel": "支持开发者",
 
   "faqMarkdown": "# 常见问题\n---\n## 可用的数学符号用于记录\n- +、-、x 和 * 用于数学运算\n- 逗号（,）用于在记录中分隔项目\n  \\（这在语义上等同于加法\\）\n\n---\n\n## 记录中的可选注释\n你可以通过在记录中添加冒号（:）和随后添加你的注释来标记额外的信息，例如食物名称或其他内容，如\\\\\n**100+80+50: 鸡蛋和吐司配果酱**\n\n---\n",
-  "tipsMarkdown": "# 提示和使用方法\n---\n## 如何计算部分份额\n部分份额可以输入如下方式：\n\n每份热量 x 数量 / 每份量\n\n因此，如果你有以60克为单位的麦片，你吃了90克，每份热量为200，总热量可以输入如下：\\\\\n**200 x 90 / 60** ***(=300)***\n\n---\n",
+  "tipsMarkdown": "# 提示和使用方法\n---\n## 如何计算部分份额\n部分份额可以输入如下方式：\n\n每份热量 x 数量 / 每份量\n\n因此，如果你有以60克为单位的麦片，你吃了90克，每份热量为200，总热量可以输入如下：\\\n**200 x 90 / 60** ***(=300)***\n\n---\n",
   "appThemeTitle": "更改应用主题",
   "lightLabel": "亮色",
   "darkLabel": "暗色",
