--- a/lib/l10n/app_zh_TW.arb
+++ b/lib/l10n/app_zh_TW.arb
@@ -61,7 +61,7 @@
   "supportLabel": "支持開發者",
 
   "faqMarkdown": "# 常見問題\n---\n## 可用的數學符號用於記錄\n- +、-、x 和 * 用於數學運算\n- 逗號（,）用於在記錄中分隔項目\n  \\（這在語義上等同於加法\\）\n\n---\n## 記錄中的可選注釋\n你可以通過在記錄中添加冒號（:）並隨後添加你的注釋來標記額外的信息，例如食物名稱或其他內容，如\\\\\n**100+80+50: 雞蛋和吐司配果醬**\n\n---\n",
-  "tipsMarkdown": "# 提示和使用方法\n---\n## 如何計算部分份額\n部分份額可以輸入如下方式：\n\n每份熱量 x 數量 / 每份量\n\n因此，如果你有以60克為單位的麥片，你吃了90克，每份熱量為200，總熱量可以輸入如下：\\\\\n**200 x 90 / 60** ***(=300)***\n\n---\n",
+  "tipsMarkdown": "# 提示和使用方法\n---\n## 如何計算部分份額\n部分份額可以輸入如下方式：\n\n每份熱量 x 數量 / 每份量\n\n因此，如果你有以60克為單位的麥片，你吃了90克，每份熱量為200，總熱量可以輸入如下：\\\n**200 x 90 / 60** ***(=300)***\n\n---\n",
   "appThemeTitle": "更改應用主題",
   "lightLabel": "亮色",
   "darkLabel": "暗色",
