updated localization; incremented minor version and build number

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -131,5 +131,7 @@
 
   "continueButton": "Continue",
   "cancelButton": "Cancel",
-  "loadingText": "Loading..."
+  "loadingText": "Loading...",
+
+  "editCaloriesCalendarButton": "Edit"
 }
