--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -89,5 +89,7 @@
 
   "continueButton": "Continuar",
   "cancelButton": "Cancelar",
-  "loadingText": "Cargando..."
+  "loadingText": "Cargando...",
+
+  "editCaloriesCalendarButton": "Editar"
 }
