--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -89,5 +89,7 @@
 
   "continueButton": "Continua",
   "cancelButton": "Annulla",
-  "loadingText": "Caricamento..."
+  "loadingText": "Caricamento...",
+
+  "editCaloriesCalendarButton": "Modificare"
 }
