--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -91,6 +91,8 @@
   "continueButton": "OK",
   "cancelButton": "キャンセル",
   "loadingText": "読み込み中...",
+  "updateButton": "更新",
+  "deleteButton": "削除",
 
   "editCaloriesCalendarButton": "エディット",
 
@@ -101,16 +103,24 @@
   "searchMenuDateColumnLabel": "日付",
 
   "searchMenuResultText": "{amount, plural, =1{1件の結果が見つかりました} other{{amount}件の結果が見つかりました}}",
-  "@searchMenuResultText": {
-    "description": "Search results count message",
-    "placeholders": {
-      "amount": {
-        "type": "int"
-      }
-    }
-  },
   "searchMenuNoItemsText1": "食品が見つかりませんでした",
   "searchMenuNoItemsText2": "食品を追加して始めましょう",
   "searchMenuNoItemsFoundText1": "結果が見つかりませんでした",
-  "searchMenuNoItemsFoundText2": "検索語句を調整してみてください"
+  "searchMenuNoItemsFoundText2": "検索語句を調整してみてください",
+
+  "symbolTableMenu": "カスタムエントリ名",
+  "symbolTableDescription": "再利用可能な名前を定義します（例：名前：卵、式：80）",
+  "symbolTableDescriptionExtended": "式には通常の数学記号や定義した他の名前を使用できます",
+  "symbolTableNameColumnHeader": "名前",
+  "symbolTableExpressionColumnHeader": "式",
+  "symbolTableNameRequiredError": "名前は必須です",
+  "symbolTableExpressionRequiredError": "式は必須です",
+  "symbolTableLoadingFailure": "シンボルの読み込みに失敗しました",
+  "symbolExpressionPositiveConstraintFailure": "無効な式：正の値である必要があります",
+
+  "symbolExpressionNoneDefinedHint1": "カスタムシンボルはまだ定義されていません。",
+  "symbolExpressionNoneDefinedHint2": "上で最初のシンボルを追加しましょう！",
+
+  "symbolTableNameExistsError": "名前 {name} はすでに存在します。別の名前を選んでください。",
+  "symbolTableConfirmDelete": "削除しますか: {name}？"
 }
